# BenchHub

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  MANUAL_VERIFICATION.md  Makefile  README.md  USER_GUIDE.md  add_column.py  app.py  app.py.bak  atomic_fix.py  backfill_git_authors.py  bench_cache.py  check_app_routes.py  check_balance.py  check_db_metrics.py  cleanup_hist_entropy.py  comparison_old.html  create_bulk_test_data.py  create_minimal_submission.py  create_test_data.py  debug_custom_field.py  debug_db_linkage.py  debug_entropy.py  debug_log.txt  debug_recalc.py  dump_config.py  dump_routes.py  enable_hist_entropy.py  enable_lb_hist_entropy.py  entrypoint.sh  fix_comparison.py  fix_custom_field_ids.py  fix_custom_field_linkage.py  fix_f1.py  fly.toml  (+27 more)
benchhub/: CLAUDE.md  __init__.py  author.py  client.py  file_tree_import.py  hf_croissant.py  hf_materialize.py  hf_results_export.py  hf_search.py  kaggle_client.py  kaggle_convert.py  kaggle_detect.py  kaggle_search.py  lb_materialize.py  manifest.py  preview.py  types.py
docs/: ARCHITECTURE.md  HF_SPACE_MIRROR_PLAN.md  KAGGLE_IMPORT_PLAN.md  KAGGLE_IMPORT_PROGRESS.md  SELFHOST_MIGRATION.md  SELFHOST_RUNBOOK.md  SESSION_NOTES_2026-05.md  hf-auto-import.md
ops/: benchhub-cache-prune.service  benchhub-cache-prune.timer  benchhub-curate.service  benchhub-curate.timer  benchhub-db-backup.service  benchhub-db-backup.timer  benchhub-grow.service  benchhub-grow.timer  benchhub-hf-sync.service  benchhub-hf-sync.timer  benchhub_db_backup.py  curate_prompt.txt
runner/: CLAUDE.md  (+4 more)
(+363 files in other folders)
